<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorBackgroundRegister">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size30dp"
        android:text="@string/register"
        android:textSize="@dimen/size40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/form_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_register"
        android:layout_marginTop="@dimen/size30dp"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@android:drawable/ic_media_next"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/username"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@android:drawable/ic_menu_agenda"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/password"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/colorAccent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/birthday"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@android:drawable/ic_menu_day"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/idcard"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:text="@string/agree"
                android:background="@color/colorButonAgree"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:text="@string/exit"
                android:background="@color/colorButonExit"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>